<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/c_scrollview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/contact_us_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/contact"
            android:textColor="@color/colorSecondary"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/c_message_LL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_blue_border"
                android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/c_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:hint="@string/full_name"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:textStyle="bold"
                android:gravity="start"
                android:textSize="15sp"
                android:padding="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_blue_border"
                android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/c_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:hint="@string/email_id"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:gravity="start"
                android:textStyle="bold"
                android:textSize="15sp"
                android:padding="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_blue_border"
                android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/c_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:hint="@string/contact_subject"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:gravity="start"
                android:textStyle="bold"
                android:textSize="15sp"
                android:padding="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_blue_border"
                android:layout_marginBottom="30dp">

            <EditText
                android:id="@+id/c_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorSecondary"
                android:hint="@string/type_in_your_message"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:gravity="start"
                android:textStyle="bold"
                android:textSize="15sp"
                android:padding="10dp" />

            </LinearLayout>

            <Button
                android:id="@+id/c_send"
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:background="@color/colorPrimary"
                android:text="@string/send_message"
                android:textStyle="bold"
                android:textColor="@color/colorSecondary"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>