<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/paal_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/app_background_1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_green_border"
        android:layout_marginBottom="20dp"
        >

    <TextView
            android:id="@+id/post_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:padding="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:background="@color/colorTertiary"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
        />

    </LinearLayout>


        <LinearLayout
            android:id="@+id/post_item_topics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/item_green_border"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/post_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/title"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:scrollbars="vertical"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorSecondary"
                    android:textStyle="bold"
                    android:background="@color/colorTertiary"
                    />

            </LinearLayout>


            <ImageView
                android:id="@+id/post_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:visibility="gone"
                android:contentDescription="@null"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/item_green_border"
                android:layout_marginBottom="20dp"
                >

                <EditText
                    android:id="@+id/post_description"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:hint="@string/description"
                    android:textColor="@color/colorAccent"
                    android:gravity="start"
                    android:scrollbars="vertical"
                    android:padding="5dp"
                    android:textSize="14sp"
                    android:textColorHint="@color/colorSecondary"
                    android:background="@color/colorTertiary"
                    />

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/post_image_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:drawableEnd="@drawable/app_upload_image"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorTertiary"
                android:visibility="visible"
                android:textSize="15sp"
                android:padding="10dp"
                android:text="@string/post_item_add_picture"
                android:textStyle="bold"
                android:scaleType="centerCrop"/>

            <Button
                android:id="@+id/post_file_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@color/colorSecondary"
                android:textColor="@color/colorTertiary"
                android:drawableEnd="@drawable/app_upload_file"
                android:visibility="gone"
                android:textSize="15sp"
                android:padding="10dp"
                android:text="@string/post_item_add_file"
                android:textStyle="bold"
                android:scaleType="centerCrop"/>



        </FrameLayout>

        <LinearLayout
            android:id="@+id/post_share"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/item_green_border"
                android:layout_marginBottom="10dp">

            <Switch
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/post_item_share_on_facebook"
                android:paddingStart="5dp"
                android:paddingEnd="20dp"
                android:id="@+id/share_facebook"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:background="@color/colorTertiary"
                android:checked="false"
                android:track="@drawable/app_switch_track"
                android:thumb="@drawable/app_switch_thumb"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/item_green_border"
                android:layout_marginBottom="20dp">

            <Switch
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/post_item_share_on_twitter"
                android:paddingStart="5dp"
                android:paddingEnd="20dp"
                android:id="@+id/share_twitter"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:background="@color/colorTertiary"
                android:checked="false"
                android:track="@drawable/app_switch_track"
                android:thumb="@drawable/app_switch_thumb"/>

                </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/post_publish"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:visibility="visible"
            android:background="@color/colorPrimary"
            android:text="@string/post_item_post_to_febulous"
            android:textStyle="bold"
            android:textColor="@color/colorTertiary"/>

        </LinearLayout>
    </ScrollView>