<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/recover_password_background"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="60dp"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signin_background"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@null"
                    android:background="@drawable/app_logo"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/colorSecondary"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold|italic"
                    android:textSize="20sp"/>

            </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_enter_email"
            android:id="@+id/fp_enter"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="30dp"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/item_blue_border">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fp_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email_id"
            android:textSize="15sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorAccent"
            android:background="@color/colorSecondary" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/fp_reset"
            android:text="@string/forgot_password_send_email"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="15sp"
            android:background="@color/colorSecondary"
            android:layout_marginTop="30dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>