<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryTransparent77">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryTransparent77"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_margin="5dp">

        <com.pkmmte.view.CircularImageView
            android:id="@+id/hp_search_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="5dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/hp_search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:autoLink="web"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorSecondary"/>

        <TextView
            android:id="@+id/hp_search_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/type"
            android:visibility="gone"
            android:textColor="@color/colorQuaternary"
            android:paddingTop="5dp"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/hp_search_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_more"
            android:visibility="gone"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorSecondary"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>